ubiquity (2.9.20) UNRELEASED; urgency=low

  * Restore old fallback code in case /cdrom/casper/filesystem.size doesn't
    exist (LP: #557388).
  * Fix some more uses of deprecated python-apt APIs.
  * ubiquity-dm: Try openbox after openbox-lubuntu (LP: #888107).
  * Thomson SA is now called Technicolor SA (LP: #856992).
  * Limit maximum length of username editing widgets to 32 (LP: #831319).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 16 Feb 2012 00:46:24 +0000

ubiquity (2.9.19) precise; urgency=low

  * Install pixmaps/windows_square.png in ubiquity-frontend-gtk.
  * Make it possible to run the test suite against installed packages, and
    add a DEP-8 control file for this.
  * Refactor copy_all to be more robust, handle some more cases, and be
    testable and tested.  It can now:
    - copy a directory over an existing non-directory (LP: #891711);
    - copy device nodes and sockets over existing non-directories
      (LP: #495217);
    - handle all cases of copying a non-directory over an existing empty
      directory;
    - copy a symlink over a non-empty directory by attempting to move the
      directory to the symlink target (LP: #188976);
    - if all else fails, copy a non-directory over an existing non-empty
      directory by moving the target aside to a backup location.
  * Ignore all failures to set timestamps (LP: #411307, #654929).
  * Update translations from Launchpad.
  * Update imported translations from gtk+3.0 3.3.14-0ubuntu2 and
    gnome-panel 1:3.3.5-0ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 15 Feb 2012 17:52:19 +0000

ubiquity (2.9.18) precise; urgency=low

  * Convert from deprecated GtkHBox/GtkVBox to GtkBox, and from
    GtkHButtonBox to GtkButtonBox.
  * Use g_object_unref instead of deprecated gdk_pixbuf_unref.
  * Use gdk_error_trap_pop_ignored rather than gdk_error_trap_pop when
    ignoring errors.
  * webcam: Warn when trying to get unknown properties.
  * webcam: Fix header typo: UBIQUITY_GET_CLASS ->