@@ -6,6 +6,8 @@ ubiquity (2.9.20) UNRELEASED; urgency=low
   * ubiquity-dm: Try openbox after openbox-lubuntu (LP: #888107).
   * Thomson SA is now called Technicolor SA (LP: #856992).
   * Limit maximum length of username editing widgets to 32 (LP: #831319).
+  * UTF-8-encode the syslog message when a geoname lookup fails, since it
+    might include non-ASCII characters entered by the user (LP: #928891).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 16 Feb 2012 00:46:24 +0000
 
